--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "diag",
         "dtheta",
+        "HAVOK",
         "KWIK",
         "mvrate",
         "subfigure"
