Added publication page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "mvrate",
         "subfigure"
     ],
-    "ros.distro": "melodic"
+    "ros.distro": "melodic",
+    "cmake.configureOnOpen": false
 }
